--- a/src/leiningen/new/clj_website/layout.html
+++ b/src/leiningen/new/clj_website/layout.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title></title>
-    <link href="/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-combined.min.css" rel="stylesheet">
     <link href="/css/custom.css" rel="stylesheet" media="screen">
   </head>
   <body>
@@ -16,6 +16,6 @@
 
     </div>
     <script src="http://code.jquery.com/jquery-latest.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
+    <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/js/bootstrap.min.js"></script>
   </body>
 </html>
